# permissive-search

./: .gitignore  Cargo.toml  README.md  bad-example.mov  good-example.mov
examples/: search_lines_in_file.rs
src/: lib.rs  lookalikes.rs  main.rs
